# locki

./: .gitignore  README.md  pyproject.toml
locki/: cipher.py  configuration.py  csprng.py  key_derivation.py  lockbox.py  recovery_code.py  types.py
